Service section added

--- a/style.css
+++ b/style.css
@@ -139,3 +139,68 @@ html {
 }
 
 /* End of about section */
+
+/* Service section */
+.services {
+    flex-direction: column;
+    min-height: 60vh;
+    padding: 10rem 5rem;
+}
+
+.services .services-header {
+    width: 100%;
+    text-align: center;
+}
+
+.services .services-header .services-header-heading {
+    font-size: 4rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: black;
+}
+
+.services .services-header .services-header-p {
+    font-size: 1.3rem;
+    line-height: 2rem;
+    margin-top: 20px;
+}
+
+.services .services-info {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
+}
+
+.services .services-info .service {
+    width: 100%;
+    min-height: 300px;
+    position: relative;
+    transition: .3s ease transform;
+    margin: 5px;
+}
+
+.services .services-info .service .service-card {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transform-style: preserve-3d;
+    transition: .3s ease transform;
+    display: block;
+}
+
+.services .services-info .service .service-card .service-front,
+.services .services-info .service .service-card .service-back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+}
+
+/* End of Service section */
+
+/* 31:33s */
