--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@ html {
 }
 
 .navbar .brand a {
-    font-family: 'Reggae One',
-        cursive;
+    font-family: 'Reggae One', cursive;
     font-size: 3rem;
     color: white;
     text-decoration: none;
@@ -71,8 +70,8 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     transition: .3s ease transform;
     cursor: pointer;
 }
@@ -214,7 +213,13 @@ html {
     color: white;
     text-transform: uppercase;
     letter-spacing: .6rem;
-    background-color: var(--grey)
+    background-color: var(--grey);
+    transition: .2s ease background-color, color;
+}
+
+.hero .hero-info .hero-button:hover {
+    background-color: rgba(255, 255, 255, 0.842);
+    color: black;
 }
 
 .hero .hero-img {
@@ -234,7 +239,7 @@ html {
 /* About section */
 .about {
     width: 100%;
-    min-width: 50vh;
+    min-height: 50vh;
     padding: 10rem 5rem;
     flex-direction: column;
 }
@@ -259,7 +264,7 @@ html {
 .about .about-info .about-info-button {
     padding: 1.6rem 2.6rem;
     display: inline-block;
-    background-color: var(--grey);
+    background-color: black;
     text-decoration: none;
     font-size: 1.6rem;
     text-transform: uppercase;
@@ -267,6 +272,11 @@ html {
     color: white;
     margin-top: 20px;
     margin-bottom: 20px;
+    transition: .2s ease background-color;
+}
+
+.about .about-info .about-info-button:hover {
+    background-color: var(--grey);
 }
 
 .about .about-img .about-img-wrapper {
@@ -290,7 +300,7 @@ html {
     transform: translateY(-50%);
     width: 70%;
     height: 120%;
-    background-color: rgba(144, 140, 140, 0.37);
+    background-color: var(--grey);
     z-index: -1;
 }
 
@@ -486,6 +496,26 @@ html {
 
 /* Media query for desktop and tab */
 @media only screen and (min-width:768px) {
+
+    .navbar .nav-list .hamburger {
+        display: none;
+    }
+
+    .navbar {
+        width: 100%;
+    }
+
+    .navbar .nav-list ul {
+        transform: translateX(0);
+        position: initial;
+        padding: 0;
+        z-index: initial;
+        background-color: transparent;
+    }
+
+    .navbar .nav-list ul li {
+        display: inline-block;
+    }
 
     .hero {
         height: 100vh;
